--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -1,3 +1,18 @@
 *{
-    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif !important;
+    font-family: monospace;
+}
+
+
+.tabO{
+    box-shadow: 0px 10px -2px grey;
+    background-color: aqua !important;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif !important;
+    height: 1.5rem;
+    transition: all .5s ease-in-out !important;
+}
+
+
+
+.nav-link{
+    transition: all .5s ease-in-out !important;
 }
